--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,6 +201,7 @@ CurrentRotGridSize=0
 CurrentScalingGridSize=1
 RotGridEnabled=False
 RotGridEnabled=True
+GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -610,7 +611,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRail
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2839,7 +2840,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -3023,10 +3024,11 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SkirtingBoard/SM_SkirtingBoard.SM_SkirtingBoard;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_WoodBrown.MI_WoodBrown;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRail/SM_PictureRail.SM_PictureRail;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SkirtingBoard/SM_SkirtingBoard.SM_SkirtingBoard;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3.MI_BrownWallTilesLower3;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2.MI_BrownWallTilesLower2;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower.MI_BrownWallTilesLower;
@@ -3042,7 +3044,6 @@ RecentlyPlaced=/Game/Assets/Amy/Asset/pillow/pillow.pillow;
 RecentlyPlaced=/Game/Megascans/Decals/Oily_Rag_pinuqzp2/MI_Oily_Rag_pinuqzp2_4K_Inst_Inst.MI_Oily_Rag_pinuqzp2_4K_Inst_Inst;
 RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/staircase.staircase;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst.MI_Clay_Vase_uddlffshw_4K_Inst;
-RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaperoinst.mat_wallpaperoinst;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
