--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -537,7 +537,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Assets/Tashan/stairs
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/teddybear_drop/pink
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/teddybear_drop/pink
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Tashan/Wood
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 None=======
 None=======
 None=======
@@ -628,7 +628,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3071,6 +3071,10 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_TrimSheetFrames.MI_TrimSheetFrames;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/SM_PhotoFrames1.SM_PhotoFrames1;
+RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Inst;
+RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/consoletable.consoletable;
 RecentlyPlaced=/Engine/TemplateResources/MI_Template_BaseGray_02_Metal.MI_Template_BaseGray_02_Metal;
 RecentlyPlaced=/Game/Group_Materials/Glass/MM_Glass.MM_Glass;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3087,10 +3091,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wooden_Stool_vkgrcfsga/S_Old_Wooden
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wicker_Basket_ukqpfhsaw/S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1.S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chair_uknjbb2bw/S_Wooden_Chair_uknjbb2bw_lod3_Var1.S_Wooden_Chair_uknjbb2bw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Crate_vijncb3/S_Wooden_Crate_vijncb3_lod3_Var1.S_Wooden_Crate_vijncb3_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Table_veilfgfaw/S_Wooden_Table_veilfgfaw_lod3_Var1.S_Wooden_Table_veilfgfaw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_ukqmfcxaw/S_Worn_Wooden_Crate_ukqmfcxaw_lod3.S_Worn_Wooden_Crate_ukqmfcxaw_lod3;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wrinkled_Tarp_vh2mee1/S_Wrinkled_Tarp_vh2mee1_lod3_Var1.S_Wrinkled_Tarp_vh2mee1_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/S_Old_Cushion_vishcehdb_lod0_Var1.S_Old_Cushion_vishcehdb_lod0_Var1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
