The Small Changes

--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,7 +220,6 @@ MRUItem10=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -778,7 +777,7 @@ Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -942,7 +941,7 @@ StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\"
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" \"Object.ImportSettings.AssetImportData.Object.Interchange .Interchange | AssetImportData\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2926,26 +2925,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/MM_LivingRoomWindwos
-MRUItem1=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindow
-MRUItem2=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem3=/Game/Group_Assets/Aziz/Assets/MM_LivinghRoomWindwo
-MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem5=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindows
-MRUItem6=/Game/Living_Room
-MRUItem7=/Game/firstfloor
-MRUItem8=/Game/abandonedroom_V2
-MRUItem9=/Game/Assets/Amy/Asset/hook_and_rope/rope/rope_lambert1_OcclusionRoughnessMetallic
-MRUItem10=/Game/Assets/Amy/Asset/hook_and_rope/rope/NewMaterial
-MRUItem11=/Game/Assets/Amy/Asset/hook_and_rope/hook/hook_lambert1_OcclusionRoughnessMetallic
-MRUItem12=/Game/Assets/Amy/Asset/hook_and_rope/hook/hook_tex
-MRUItem13=/Game/Assets/Amy/Asset/music_Stand/music_stand
-MRUItem14=/Game/Assets/Amy/Asset/pic5
-MRUItem15=/Game/Assets/Amy/Asset/candle/candle_Normal
-MRUItem16=/Game/Assets/Amy/Asset/candle/candlemat
-MRUItem17=/Game/Assets/Amy/Asset/candle/candletex
-MRUItem18=/Game/Assets/Amy/Asset/pic4
-MRUItem19=/Game/Assets/Amy/Asset/pic3
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem1=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures
+MRUItem2=/Game/Group_Assets/Aziz/Assets/MM_LivingRoomWindwos
+MRUItem3=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindow
+MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem5=/Game/Group_Assets/Aziz/Assets/MM_LivinghRoomWindwo
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem7=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindows
+MRUItem8=/Game/Living_Room
+MRUItem9=/Game/firstfloor
+MRUItem10=/Game/abandonedroom_V2
+MRUItem11=/Game/Assets/Amy/Asset/hook_and_rope/rope/rope_lambert1_OcclusionRoughnessMetallic
+MRUItem12=/Game/Assets/Amy/Asset/hook_and_rope/rope/NewMaterial
+MRUItem13=/Game/Assets/Amy/Asset/hook_and_rope/hook/hook_lambert1_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Amy/Asset/hook_and_rope/hook/hook_tex
+MRUItem15=/Game/Assets/Amy/Asset/music_Stand/music_stand
+MRUItem16=/Game/Assets/Amy/Asset/pic5
+MRUItem17=/Game/Assets/Amy/Asset/candle/candle_Normal
+MRUItem18=/Game/Assets/Amy/Asset/candle/candlemat
+MRUItem19=/Game/Assets/Amy/Asset/candle/candletex
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3071,6 +3070,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures.MM_Pictures;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_TrimSheetFrames.MI_TrimSheetFrames;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/SM_PhotoFrames1.SM_PhotoFrames1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Inst;
@@ -3090,7 +3090,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wooden_Stool_vkgrcfsga/S_Old_Wooden
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wooden_Stool_vkgrcfsga/S_Old_Wooden_Stool_vkgrcfsga_lod3_Var1.S_Old_Wooden_Stool_vkgrcfsga_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wicker_Basket_ukqpfhsaw/S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1.S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chair_uknjbb2bw/S_Wooden_Chair_uknjbb2bw_lod3_Var1.S_Wooden_Chair_uknjbb2bw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Crate_vijncb3/S_Wooden_Crate_vijncb3_lod3_Var1.S_Wooden_Crate_vijncb3_lod3_Var1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3623,6 +3622,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/MM_LivinghRoomWindwo.MM_LivinghRoomWindwo=1
 /Game/Group_Assets/Aziz/Assets/MM_LivingRoomWindwos.MM_LivingRoomWindwos=1
 /Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindow.MI_LivingRoomWindow=1
+/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures.MM_Pictures=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
