--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -628,7 +628,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2926,16 +2926,16 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/HighresScreenshot00068_Mat
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
-MRUItem2=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures
-MRUItem3=/Game/Group_Assets/Aziz/Assets/MM_LivingRoomWindwos
-MRUItem4=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindow
-MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem6=/Game/Group_Assets/Aziz/Assets/MM_LivinghRoomWindwo
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem8=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindows
-MRUItem9=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/HighresScreenshot00068_Mat
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
+MRUItem3=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures
+MRUItem4=/Game/Group_Assets/Aziz/Assets/MM_LivingRoomWindwos
+MRUItem5=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindow
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem7=/Game/Group_Assets/Aziz/Assets/MM_LivinghRoomWindwo
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem9=/Game/Group_Assets/Aziz/Assets/MI_LivingRoomWindows
 MRUItem10=/Game/firstfloor
 MRUItem11=/Game/abandonedroom_V2
 MRUItem12=/Game/Assets/Amy/Asset/hook_and_rope/rope/rope_lambert1_OcclusionRoughnessMetallic
