--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -627,7 +627,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/PictureRailStuff
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2788,6 +2788,7 @@ OpenColorIOSettings.Transform=True
 MaterialExpressionReroute.MaterialExpression=True
 Emitter.TextureStreaming=True
 EditorKeyboardShortcutSettings.MovieRenderPipeline=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2912,7 +2913,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2.AzizTimeline2
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2928,26 +2928,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFrames
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/PianoFrames_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem4=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_NewPhotoFrames
-MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
-MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
-MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
-MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
-MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
-MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
-MRUItem11=/Game/Group_Assets/Amy/Asset/gramophone/MM_NewGramophone2
-MRUItem12=/Game/Group_Assets/Amy/Asset/gramophone/Gramophone_1001_OcclusionRoughnessMetallic
-MRUItem13=/Game/Group_Assets/Amy/Asset/gramophone/MM_NewGramphone
-MRUItem14=/Game/Group_Assets/Amy/Asset/gramophone/Gramophone_1002_OcclusionRoughnessMetallic
-MRUItem15=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3_2
-MRUItem16=/Game/Group_Assets/Aziz/Assets/Material
-MRUItem17=/Game/Group_Assets/Aziz/Assets/HighresScreenshot00068_Mat
-MRUItem18=/Game/Group_Assets/Aziz/Assets/Vases/Vase_low
-MRUItem19=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_Pictures
+MRUItem0=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_RightSidePhotoFrames
+MRUItem1=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/PhotoFrame1_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFrames
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/PianoFrames_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem6=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_NewPhotoFrames
+MRUItem7=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
+MRUItem8=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
+MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
+MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
+MRUItem11=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
+MRUItem12=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
+MRUItem13=/Game/Group_Assets/Amy/Asset/gramophone/MM_NewGramophone2
+MRUItem14=/Game/Group_Assets/Amy/Asset/gramophone/Gramophone_1001_OcclusionRoughnessMetallic
+MRUItem15=/Game/Group_Assets/Amy/Asset/gramophone/MM_NewGramphone
+MRUItem16=/Game/Group_Assets/Amy/Asset/gramophone/Gramophone_1002_OcclusionRoughnessMetallic
+MRUItem17=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3_2
+MRUItem18=/Game/Group_Assets/Aziz/Assets/Material
+MRUItem19=/Game/Group_Assets/Aziz/Assets/HighresScreenshot00068_Mat
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3073,6 +3073,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_RightSidePhotoFrames.MI_RightSidePhotoFrames;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_NewPhotoFrames.MM_NewPhotoFrames;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFrames.MI_PianoFrames;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/PianoFrame5.PianoFrame5;
@@ -3092,7 +3093,6 @@ RecentlyPlaced=/Game/Megascans/3D_Plants/Curled_Dock_tfeqdhjr/S_Curled_Dock_tfeq
 RecentlyPlaced=/Game/Megascans/3D_Plants/Curled_Dock_tfeqdhjr/S_Curled_Dock_tfeqdhjr_Var2_lod1.S_Curled_Dock_tfeqdhjr_Var2_lod1;
 RecentlyPlaced=/Game/Megascans/3D_Plants/Curled_Dock_tfeqdhjr/S_Curled_Dock_tfeqdhjr_Var5_lod1.S_Curled_Dock_tfeqdhjr_Var5_lod1;
 RecentlyPlaced=/Game/Megascans/3D_Plants/Curled_Dock_tfeqdhjr/S_Curled_Dock_tfeqdhjr_Var7_lod1.S_Curled_Dock_tfeqdhjr_Var7_lod1;
-RecentlyPlaced=/Game/Megascans/3D_Plants/Curled_Dock_tfeqdhjr/S_Curled_Dock_tfeqdhjr_Var6_lod1.S_Curled_Dock_tfeqdhjr_Var6_lod1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3635,9 +3635,11 @@ None=======
 /Game/Group_Assets/Aziz/Assets/PictureRailStuff/MM_NewPhotoFrames.MM_NewPhotoFrames=1
 /Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/PianoFrames_low_DefaultMaterial_OcclusionRoughnessMetallic.PianoFrames_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFrames.MI_PianoFrames=1
+/Game/Group_Assets/Aziz/Assets/PictureRailStuff/PhotoFrame1_low_DefaultMaterial_OcclusionRoughnessMetallic.PhotoFrame1_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_RightSidePhotoFrames.MI_RightSidePhotoFrames=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
