--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,7 +220,6 @@ MRUItem10=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -778,7 +777,7 @@ Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -1907,6 +1906,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -2793,7 +2793,6 @@ OpenColorIOSettings.Transform=True
 MaterialExpressionReroute.MaterialExpression=True
 Emitter.TextureStreaming=True
 EditorKeyboardShortcutSettings.MovieRenderPipeline=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2892,7 +2891,7 @@ LevelEditorViewportSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2933,26 +2932,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/SM_WallDoorTile
-MRUItem1=/Game/Group_Assets/Aziz/Assets/SM_WallTile
-MRUItem2=/Game/Group_Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Fireplace/ID_1
-MRUItem5=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
-MRUItem6=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
-MRUItem7=/Game/Assets/Tashan/table/table4_1001_BaseColor
-MRUItem8=/Game/Assets/Tashan/table/mat_table
-MRUItem9=/Game/Living_Room
-MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
-MRUItem11=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
-MRUItem12=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
-MRUItem13=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
-MRUItem14=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
-MRUItem15=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/MI_MirrorLivingRoom
-MRUItem16=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/Mirror_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem17=/Game/Group_Assets/Aziz/M_Mirror
-MRUItem18=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFramePhotos
-MRUItem19=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/PianoFrames_low_Photos_OcclusionRoughnessMetallic
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom
+MRUItem2=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_FeintConcreteCrack
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2
+MRUItem4=/Game/Living_Room
+MRUItem5=/Game/Group_Assets/Aziz/Assets/SM_WallDoorTile
+MRUItem6=/Game/Group_Assets/Aziz/Assets/SM_WallTile
+MRUItem7=/Game/Group_Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Fireplace/ID_1
+MRUItem9=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline2
+MRUItem10=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline3
+MRUItem11=/Game/Assets/Tashan/table/table4_1001_BaseColor
+MRUItem12=/Game/Assets/Tashan/table/mat_table
+MRUItem13=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline7
+MRUItem14=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline
+MRUItem15=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline6
+MRUItem16=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline5
+MRUItem17=/Game/Group_Assets/Aziz/TimelineStuff/AzizTimeline4
+MRUItem18=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/MI_MirrorLivingRoom
+MRUItem19=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/Mirror_low_DefaultMaterial_OcclusionRoughnessMetallic
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3078,7 +3077,11 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom.MM_WallpaperLivingroom;
+RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_FeintConcreteCrack.MI_FeintConcreteCrack;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2.SM_WallTile2;
+RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_se4otkg_4K_Inst1.MI_Concrete_Crack_se4otkg_4K_Inst1;
 RecentlyPlaced=/Game/Assets/Tashan/table/mat_table.mat_table;
 RecentlyPlaced=/Game/Assets/Tashan/table/mat_table_5.mat_table_5;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/PictureRailStuff/MI_Images2.MI_Images2;
@@ -3094,10 +3097,6 @@ RecentlyPlaced=/Game/Group_Assets/lightswitch/lightswitch.lightswitch;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/MI_MirrorLivingRoom.MI_MirrorLivingRoom;
 RecentlyPlaced=/Game/Group_Assets/Aziz/M_Mirror.M_Mirror;
 RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror.M_Mirror;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/LivingRoomMirror/Mirror_low.Mirror_low;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFrames.MI_PianoFrames;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/PhotoFrames/MI_PianoFramePhotos.MI_PianoFramePhotos;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3659,9 +3658,12 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Wallpaper/MM_WallpaperLivingroom.MM_WallpaperLivingroom=1
 /Game/Group_Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat.floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat=1
 /Game/Group_Assets/Aziz/Assets/SM_WallDoorTile.SM_WallDoorTile=1
+/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile2.SM_WallTile2=1
+/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_FeintConcreteCrack.MI_FeintConcreteCrack=1
+/Game/Group_Assets/Aziz/Assets/Wallpaper/SM_WallTile.SM_WallTile=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
