--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -4006,9 +4006,9 @@ BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/CurtainPole/CurtainPole.fbx
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/DamagedWallpaper/SM_WallTile5.fbx
+GenericImport=C:/Users/demaz/Downloads/Layer 0.png
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
-GenericExport=../../../../../../Game Projects/Morrigan Hall/Assets/DamagedWallpaper/SM_WallTile.FBX
+GenericExport=../../../../../../Game Projects/Morrigan Hall/Assets/DamagedWallpaper/T_Flaked_Paint_Wall_vhqkdfx_4K_D.EXR
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 MeshImportExport=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
